<resources>
    <string name="firebase_OAuthclientID">1051114279723-pejj6gaem6m1422kfcas7arv3qb9hkmr.apps.googleusercontent.com</string>
    <string name="app_name">DrStock</string>
    <string name="title_home">Home</string>
    <string name="title_stock">Stock</string>
    <string name="title_account">Account</string>
    <string name="title_login">Log In</string>
    <string name="title_my_stock">My Stocks</string>
    <string name="facebook_app_id">129361257826891</string>
    <string name="fb_login_protocol_scheme">fb129361257826891</string>
    <string name="search_hint">Search stocks</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_send">Send</string>
    <string name="action_back_sign_in">Back to Sign In</string>
    <string name="add_money">Money Transfer</string>
    <string name="add_to_favorite">Add To Favorites</string>
    <string name="buy_stock">Buy Stock</string>
    <string name="chat_room">Chat Room</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="my_stocks">My Stocks</string>
    <string name="my_favorites">Favorites</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="prompt_msg">Type a message</string>
    <string name="login_process">Login in processing...</string>
    <string name="problem_signin_msg">There was a problem signing in</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="sample_message">Hello!</string>
    <string name="text_you_have_earn">You have earned: </string>
    <string name="text_your_total_money">Your total assets: </string>
    <string name="action_settings">setting</string>
    <string name="action_delete">delete</string>
    <string name="action_detail">detail</string>
    <string name="action_add">add</string>
    <string name="button_add_label">Search</string>
    <string name="stock_name_title">Name</string>
    <string name="stock_now_title">Index</string>
    <string name="stock_increase_percent_title">Percentage</string>
    <string name="stock_increase_title">Change</string>
    <string name="stock_sh_name">SSE</string>
    <string name="stock_sz_name">SZSE</string>
    <string name="stock_chuang_name">GEI</string>
    <string name="stock_hsi_name">HSI</string>
    <string name="stock_djia_name">DJIA</string>
    <string name="stock_nsdk_name">NASDAQ</string>
    <string name="stock_buy">Buy</string>
    <string name="stock_sell">Sell</string>
    <string name="cancel">Cancel</string>
    <string name="buy">BUY</string>
    <string name="sell">SELL</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="volume">Volume</string>
    <string name="turnover">Turnover</string>
    <string name="bidPanel">Bid Queue</string>
    <string name="sellPanel">Sell Queue</string>
    <string name="bid1">Bid 1</string>
    <string name="sell1">Sell 1</string>
    <string name="text_back">Back</string>
    <string name="colour_setting">Color Setting</string>
    <string name="rise_green">Green means Rising</string>
    <string name="refresh_rate_label">Refresh Rate</string>
    <string name="per_10s">10s</string>
    <string name="feedback">Feedback</string>
    <string name="credits">Credits</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="hotline_hk">Hotline(HK)</string>
    <string name="hotline_mainland">Hotline(Mainland)</string>
    <string name="hotline_us">Hotline(US)</string>
    <string name="email">Email</string>
    <string name="refreshSetting_mobileRefresh">Mobile Data Auto Refresh</string>
    <string name="refreshSetting_noRefresh">No Auto Refresh</string>
    <string name="refreshSetting_wifiRefresh">WiFi Data Auto Refresh</string>
    <string name="rise_red">Red means Rising</string>
    <string name="refreshActivity">Refresh Setting</string>
    <string name="feedbackActivity">Feedback</string>
    <string name="creditsActivity">Credits</string>
    <string name="mainActivity">Home</string>
    <string name="setting">Setting</string>
    <string name="minute">Minute</string>
    <string name="one_month">1 Month</string>
    <string name="three_month">3 Month</string>
    <string name="one_year">1 Year</string>
    <string name="three_year">3 Year</string>
    <string name="rsi_10">10 days</string>
    <string name="rsi_14">14 days</string>
    <string name="rsi_20">20 days</string>
    <string name="loading">Loading...</string>
    <string name="toast_you_dont_have_this_stock">You did not buy this stock</string>
    <string name="toast_you_cant_sell_more_than_you_have">You cannot sell more than what you have</string>
    <string name="toast_you_have_earned">You have earned </string>
    <string name="toast_you_have_lost">You have lost </string>
    <string name="toast_you_dont_have_enough_money">You do not have enough money</string>
    <string name="toast_invalid_input">Invalid input</string>
    <string name="toast_buy_successfully">Buy successfully! spend</string>
    <string name="toast_sorry_only_hk_graph">Sorry, you can only see HK stocks graph.</string>
    <string name="toast_added_to_watchlist">Added to watch list</string>
    <string name="toast_delete_from_watchlist">Delete from watch list</string>
    <string name="toast_error">ERROR</string>
    <string name="toast_signin_first">Please sign in first.</string>
    <string name="enter_the_amount_sell">Enter the amount you want to sell</string>
    <string name="enter_the_amount_buy">Enter the amount you want to buy</string>
    <string name="programmer">Developer</string>
    <string name="syz_E">SHI Yuzhou</string>
    <string name="syz_C">施宇舟</string>
    <string name="ljq_E">LIU Junqi</string>
    <string name="ljq_C">刘俊琪</string>
    <string name="lsh_E">LI Shuhan</string>
    <string name="lsh_C">李纾涵</string>
    <string name="wj_E">WANG Jing</string>
    <string name="wj_C">王晶</string>
    <string name="tjy_E">TANG Junyi</string>
    <string name="tjy_C">唐峻逸</string>
    <string name="gyx_E">GU Yuxuan</string>
    <string name="gyx_C">谷宇轩</string>
    <string name="text_stock_id">Stock ID</string>
    <string name="text_stock_name">Stock Name</string>
    <string name="text_current_Price">Current Price</string>
    <string name="text_amount">Amount</string>
    <string name="text_bought_price">Buy Price</string>
    <string name="text_precision_error">Invalid. The minimum amount is 0.01</string>
    <string name="text_the_exchange_rate">The real time exchange rate to HKD is: </string>
    <string name="currency_usd_name">USD</string>
    <string name="currency_rmb_name">RMB</string>
    <string name="currency_gbp_name">GBP</string>
    <string name="hello">Hello World, JPush!</string>
    <string name="tag_hint">Tag can be number, alphabet, underscore, Chinese. Use , to split many tags.</string>
    <string name="alias_hint">Alias can be number, alphabet, underscore, Chinese.</string>
    <string name="mobilenumber_hint">The phone number can only start with a "+" or a number,other can only contain "-" and Numbers</string>
    <string name="style_hint">style should be number</string>
    <string name="error_style_empty">style cannot be empty</string>
    <string name="error_alias_empty">alias cannot be empty</string>
    <string name="error_tag_empty">tag cannot be empty</string>
    <string name="error_tag_gs_empty">Invalid format</string>
    <string name="mobilenumber_empty_guide">will clear last set phone number</string>
    <string name="error_network">Failed to init due to network exception.</string>
    <string name="logining">Running in background. Please see log.</string>
    <string name="setting_su">Succeed to set</string>
    <string name="vertify_email">resend verification</string>
    <string name="vertification_email_sent_to">verification email sent to </string>
    <string name="vertification_email_failed">fail to send verification email</string>
    <string name="go_to_vertify_email">This email is not verified</string>
    <string name="have_verified_email">You haved verified</string>
    <string name="phone_number">Phone Number</string>
    <string name="send_code">Send Code</string>
    <string name="resend_code">Re-send Code</string>
    <string name="SMS_code">code</string>
    <string name="invalid_code">Your code entered is invalid</string>
    <string name="sign_in_with_phone">Sign in with phone number</string>
    <string name="back_to_email_sign_in">Email Sign In</string>
    <string name="SMS_has_been_sent">Code has been sent to your phone</string>
    <string name="Google_auth_fail">Google Authentication Failed.</string>
    <string name="add_to_plan">Add to Plan</string>
    <string name="plan_detail">Plan Details</string>
    <string name="investmentPlanDetails">investment Plan Details</string>
    <string name="investment_plan">Investment Plan</string>
    <string name="toast_add_first">Please add to plan first</string>
    <string name="set_username">Set your user name</string>
    <string name="text_try_sip">Try our Smart Investment Plan</string>
    <string name="your_price_too_high">Invalid. Your price is too high</string>
    <string name="your_price_too_low">Invalid. Your price is too low</string>
    <string name="text_selling_price">Selling price</string>
    <string name="text_buying_price">Buying price</string>
    <string name="language_set">Language</string>
    <string name="setting_language_auto">System Language</string>
    <string name="setting_language_title">Language Setting</string>
    <string name="URL">https://newsapi.org/v2/top-headlines?country=gb&amp;category=business&amp;apiKey=1dc8b434998d426c9ded34de0e58ec08</string>
    <string name="invalid_phone_num">Please enter valid phone number</string>
    <string name="toast_click_change">Please click \"change\" button</string>
    <string name="text_SIP">Smart Investment Plan</string>
    <string name="text_change_SIP">Change Smart Investment Plan</string>
    <string name="text_enter_the_basevolume">Enter the base volume you want to invest every week</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="enter_new_plan_zero_for_deleting">Enter the new volume of your plan, enter zero or click on delete if you want to delete your plan</string>
    <string name="plan_current_volume_is">Your current plan volume is: </string>
    <string name="toast_plan_change">Plan changed!</string>
    <string name="text_plan_title">My Investment Plans</string>
    <string name="text_base_volume">Base Volume</string>
    <string name="text_plan_frequency">Frequency</string>
    <string name="rsi_6">6 days</string>
    <string name="rsi_12">12 days</string>
    <string name="rsi_24">24 days</string>
    <string name="top20">Top 20</string>
    <string name="change_percentage">Change %</string>
    <string name="lv_volume">Volume</string>
    <string name="current_price">Current Price</string>
    <string name="top_up">UP Stocks</string>
    <string name="top_down">DOWN Stocks</string>
    <string name="top_vol">Sort by VOLUME</string>
    <string name="top_turn">Sort by TURNOVER</string>
</resources>