<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smarthuman.drstock.PhoneRegActivity">

    <EditText
        android:id="@+id/phoneUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prompt_username"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/phoneText"/>

    <EditText
        android:id="@+id/phoneText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/sendSMS"
        app:layout_constraintTop_toBottomOf="@+id/phoneUserName"/>

    <Button
        android:id="@+id/sendSMS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onSendCode"
        android:text="@string/send_code"
        app:layout_constraintBottom_toTopOf="@+id/resendButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneText" />

    <Button
        android:id="@+id/resendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="resendCode"
        android:text="Resend Code"
        app:layout_constraintBottom_toTopOf="@+id/codeText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendSMS" />

    <EditText
        android:id="@+id/codeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/SMS_code"
        android:inputType="number"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/verifyButton"
        app:layout_constraintTop_toBottomOf="@+id/resendButton" />

    <Button
        android:id="@+id/verifyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="SignIn"
        android:text="@string/action_sign_in_short"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codeText"
        app:layout_constraintBottom_toTopOf="@+id/back_sign_in_button"/>

    <Button
        android:id="@+id/back_to_email_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onBack"
        android:text="@string/back_to_email_sign_in"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyButton" />





</android.support.constraint.ConstraintLayout>