<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/activity_top20list"
    android:fillViewport="true"
    android:background="@color/FloralWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/timber" />

            <Button
                android:id="@+id/top_up"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:text="@string/top_up"
                android:textSize="11dp"/>

            <ImageView
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/timber" />

            <Button
                android:id="@+id/top_down"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:text="@string/top_down"
                android:textSize="11dp"/>

            <ImageView
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/timber" />

            <Button
                android:id="@+id/top_vol"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:text="@string/top_vol"
                android:textSize="11dp"/>

            <ImageView
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/timber" />

            <Button
                android:id="@+id/top_turn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:text="@string/top_turn"
                android:textSize="11dp"/>

            <ImageView
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/timber" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/text_stock_id"
                android:textColor="@color/home_tab_bg"
                android:gravity="left"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/change_percentage"
                android:gravity="right"
                android:textColor="@color/home_tab_bg"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/lv_volume"
                android:textColor="@color/home_tab_bg"
                android:gravity="right"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/text_current_Price"
                android:gravity="right"
                android:textColor="@color/home_tab_bg"
                android:layout_weight="1"/>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:background="@drawable/line_timber" />

        <ListView
            android:id="@+id/top20_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd" >
        </ListView>

    </LinearLayout>

</ScrollView>

