<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:padding="0dp"
    android:gravity="center">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.github.mikephil.charting.charts.CombinedChart
            android:id="@+id/kline_chart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.80"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <Button
                android:id="@+id/rsi_10_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:text="@string/rsi_10"
                android:textSize="9dp"/>

            <Button
                android:id="@+id/rsi_14_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:text="@string/rsi_14"
                android:textSize="9dp"/>

            <Button
                android:id="@+id/rsi_20_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:text="@string/rsi_20"
                android:textSize="9dp"/>

        </LinearLayout>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/RSI_chart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"/>

    </LinearLayout>
</RelativeLayout>
